crates/solidity/testing/snapshots/bindings_output/mappings/named_parameters/v2/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected EqualGreaterThan or PayableKeyword.
   ╭─[input.sol:2:19]
   │
 2 │   mapping(address name => uint256) public justNameInKey;
   │                   ───────┬───────  
   │                          ╰───────── Error occurred here.
───╯
Error: Expected CloseParen or OpenBracket.
   ╭─[input.sol:4:30]
   │
 4 │   mapping(address => uint256 amount) public justNameInValue;
   │                              ───┬──  
   │                                 ╰──── Error occurred here.
───╯
Error: Expected EqualGreaterThan or PayableKeyword.
   ╭─[input.sol:6:19]
   │
 6 │   mapping(address name => uint256 amount) public nameInBoth;
   │                   ───────────┬──────────  
   │                              ╰──────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["NamedMapping" @ input.sol:1:10] (contract)
- Def: #2 ["justNameInValue" @ input.sol:4:45] (state var, type: address => uint256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (2):
- ???: ["justNameInKey" @ input.sol:2:43]
- ???: ["nameInBoth" @ input.sol:6:50]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract NamedMapping {
   │          ──────┬─────  
   │                ╰─────── name: 1
 2 │   mapping(address name => uint256) public justNameInKey;
   │                                           ──────┬──────  
   │                                                 ╰──────── ???
   │ 
 4 │   mapping(address => uint256 amount) public justNameInValue;
   │                                             ───────┬───────  
   │                                                    ╰───────── name: 2
   │ 
 6 │   mapping(address name => uint256 amount) public nameInBoth;
   │                                                  ─────┬────  
   │                                                       ╰────── ???
───╯
